Automate docs generation; Rename main contract to WebOfTrust

--- a/docs/website/antora-playbook.yml
+++ b/docs/website/antora-playbook.yml
@@ -1,12 +1,9 @@
-
-
 site:
-  title: Antora Demo Site
+  title: Byzantic Docs
   url: https://my-antora-demo-site.org 
-  start_page: component-b::index.adoc 
 content:
   sources:
-  - url: ../
+  - url: ../../
     start_path: docs
 ui:
   bundle:
