--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ethers": "^4.0.47",
     "npm": "^6.14.6",
     "openzeppelin-solidity": "^3.0.1",
+    "solidity-coverage": "^0.7.9",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "web3": "^1.2.8"
