--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "npm": "^6.14.6",
     "openzeppelin-solidity": "^3.0.1",
     "solidity-coverage": "^0.7.9",
+    "truffle-config": "^1.1.20",
+    "truffle-expect": "0.0.9",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
-    "web3": "^1.2.8"
+    "web3": "^1.2.11"
   },
   "dependencies": {
     "solc": "^0.5.17",
